Fix superposicion carrousel. Se agrega z-index al nav menu

--- a/css/estiloGeneral.css
+++ b/css/estiloGeneral.css
@@ -76,6 +76,7 @@ header {
   }
 
   .nav.visible {
+      z-index: 1;
       width: 100%;
       opacity: 0.99;
       visibility: visible;
